Assert in UI_but_number_precision_set #80613

Closed
opened 2020-09-09 04:07:19 +02:00 by Campbell Barton · 3 comments

Blender 2.91 b8840c105a4e44c3dd8be2fa90dc610e4ef25cd5,

When opening this file explode modifier doesnt react properly to vertex weight proximity.blend (file from #77654), there is an assert in: UI_but_number_precision_set.

Caused by e6f0b60c2e.

Stack trace:

- 0  0x00007ffff6549615 in raise () from /usr/lib/libc.so.6
- 1  0x00007ffff6532862 in abort () from /usr/lib/libc.so.6
- 2  0x00005555657549b1 in _BLI_assert_abort () at /src/blender/source/blender/blenlib/intern/BLI_assert.c:50
- 3  0x000055555fd927f0 in UI_but_number_precision_set (but=0x619000662b88, precision=-1) at /src/blender/source/blender/editors/interface/interface.c:6765
#4  0x000055555fd8639d in ui_def_but_rna (block=0x6170000deb88, type=3072, retval=0, str=0x555565fc4b20 "", x=0, y=0, width=400, height=40, ptr=0x603000135018,
    prop=0x55556d186680 <rna_VertexWeightProximityModifier_min_dist>, index=-1, min=0, max=3.40282347e+38, a1=10, a2=-1, tip=0x555566c2e760 "Distance mapping to weight 0.0")
    at /src/blender/source/blender/editors/interface/interface.c:4503
#5  0x000055555fd896d0 in uiDefButR_prop (block=0x6170000deb88, type=3072, retval=0, str=0x555565fc4b20 "", x=0, y=0, width=400, height=40, ptr=0x603000135018,
    prop=0x55556d186680 <rna_VertexWeightProximityModifier_min_dist>, index=-1, min=0, max=0, a1=0, a2=0, tip=0x0) at /src/blender/source/blender/editors/interface/interface.c:5145
#6  0x000055555ffcd39b in uiDefAutoButR (block=0x6170000deb88, ptr=0x603000135018, prop=0x55556d186680 <rna_VertexWeightProximityModifier_min_dist>, index=-1, name=0x555565fc4b20 "", icon=0, x1=0, y1=0, x2=400,
    y2=40) at /src/blender/source/blender/editors/interface/interface_utils.c:166
#7  0x000055555fea929d in uiItemFullR (layout=0x61100036b188, ptr=0x603000135018, prop=0x55556d186680 <rna_VertexWeightProximityModifier_min_dist>, index=-1, value=0, flag=0, name=0x555565fc4b20 "", icon=0)
    at /src/blender/source/blender/editors/interface/interface_layout.c:2296
- 8  0x000055555feaa9f1 in uiItemR (layout=0x61100036adc8, ptr=0x603000135018, propname=0x555566996160 "min_dist", flag=0, name=0x0, icon=0) at /src/blender/source/blender/editors/interface/interface_layout.c:2396
- 9  0x0000555561dbbe81 in panel_draw (UNUSED_C=0x60c000000108, panel=0x611000367588) at /src/blender/source/blender/modifiers/intern/MOD_weightvgproximity.c:668
#10 0x000055555fc420e1 in ed_panel_draw (C=0x60c000000108, region=0x614000070248, lb=0x614000070350, pt=0x61600001ce88, panel=0x611000367588, w=398, em=20, unique_panel_str=0x7fffffffe090 "159")
    at /src/blender/source/blender/editors/screen/area.c:2659
#11 0x000055555fc44fcc in ED_region_panels_layout_ex (C=0x60c000000108, region=0x614000070248, paneltypes=0x611000011028, contexts=0x7fffffffe150, category_override=0x0)
    at /src/blender/source/blender/editors/screen/area.c:2842
- 12 0x00005555653b4218 in buttons_main_region_layout_properties (C=0x60c000000108, sbuts=0x6120001f63c8, region=0x614000070248) at /src/blender/source/blender/editors/space_buttons/space_buttons.c:295
- 13 0x00005555653b435f in buttons_main_region_layout (C=0x60c000000108, region=0x614000070248) at /src/blender/source/blender/editors/space_buttons/space_buttons.c:307
- 14 0x000055555fc1d3f3 in ED_region_do_layout (C=0x60c000000108, region=0x614000070248) at /src/blender/source/blender/editors/screen/area.c:494
- 15 0x000055555fad6a51 in wm_draw_window_offscreen (C=0x60c000000108, win=0x613000526508, stereo=false) at /src/blender/source/blender/windowmanager/intern/wm_draw.c:654
- 16 0x000055555fad853b in wm_draw_window (C=0x60c000000108, win=0x613000526508) at /src/blender/source/blender/windowmanager/intern/wm_draw.c:823
- 17 0x000055555fad9b28 in wm_draw_update (C=0x60c000000108) at /src/blender/source/blender/windowmanager/intern/wm_draw.c:1026
- 18 0x000055555fac969b in WM_main (C=0x60c000000108) at /src/blender/source/blender/windowmanager/intern/wm.c:488
- 19 0x000055555fab885d in main (argc=1, argv=0x7fffffffe538) at /src/blender/source/creator/creator.c:529
Blender 2.91 `b8840c105a4e44c3dd8be2fa90dc610e4ef25cd5`, When opening this file [explode modifier doesnt react properly to vertex weight proximity.blend](https://archive.blender.org/developer/F8602702/explode_modifier_doesnt_react_properly_to_vertex_weight_proximity.blend) (file from #77654), there is an assert in: `UI_but_number_precision_set`. Caused by e6f0b60c2e. Stack trace: ``` - 0 0x00007ffff6549615 in raise () from /usr/lib/libc.so.6 - 1 0x00007ffff6532862 in abort () from /usr/lib/libc.so.6 - 2 0x00005555657549b1 in _BLI_assert_abort () at /src/blender/source/blender/blenlib/intern/BLI_assert.c:50 - 3 0x000055555fd927f0 in UI_but_number_precision_set (but=0x619000662b88, precision=-1) at /src/blender/source/blender/editors/interface/interface.c:6765 #4 0x000055555fd8639d in ui_def_but_rna (block=0x6170000deb88, type=3072, retval=0, str=0x555565fc4b20 "", x=0, y=0, width=400, height=40, ptr=0x603000135018, prop=0x55556d186680 <rna_VertexWeightProximityModifier_min_dist>, index=-1, min=0, max=3.40282347e+38, a1=10, a2=-1, tip=0x555566c2e760 "Distance mapping to weight 0.0") at /src/blender/source/blender/editors/interface/interface.c:4503 #5 0x000055555fd896d0 in uiDefButR_prop (block=0x6170000deb88, type=3072, retval=0, str=0x555565fc4b20 "", x=0, y=0, width=400, height=40, ptr=0x603000135018, prop=0x55556d186680 <rna_VertexWeightProximityModifier_min_dist>, index=-1, min=0, max=0, a1=0, a2=0, tip=0x0) at /src/blender/source/blender/editors/interface/interface.c:5145 #6 0x000055555ffcd39b in uiDefAutoButR (block=0x6170000deb88, ptr=0x603000135018, prop=0x55556d186680 <rna_VertexWeightProximityModifier_min_dist>, index=-1, name=0x555565fc4b20 "", icon=0, x1=0, y1=0, x2=400, y2=40) at /src/blender/source/blender/editors/interface/interface_utils.c:166 #7 0x000055555fea929d in uiItemFullR (layout=0x61100036b188, ptr=0x603000135018, prop=0x55556d186680 <rna_VertexWeightProximityModifier_min_dist>, index=-1, value=0, flag=0, name=0x555565fc4b20 "", icon=0) at /src/blender/source/blender/editors/interface/interface_layout.c:2296 - 8 0x000055555feaa9f1 in uiItemR (layout=0x61100036adc8, ptr=0x603000135018, propname=0x555566996160 "min_dist", flag=0, name=0x0, icon=0) at /src/blender/source/blender/editors/interface/interface_layout.c:2396 - 9 0x0000555561dbbe81 in panel_draw (UNUSED_C=0x60c000000108, panel=0x611000367588) at /src/blender/source/blender/modifiers/intern/MOD_weightvgproximity.c:668 #10 0x000055555fc420e1 in ed_panel_draw (C=0x60c000000108, region=0x614000070248, lb=0x614000070350, pt=0x61600001ce88, panel=0x611000367588, w=398, em=20, unique_panel_str=0x7fffffffe090 "159") at /src/blender/source/blender/editors/screen/area.c:2659 #11 0x000055555fc44fcc in ED_region_panels_layout_ex (C=0x60c000000108, region=0x614000070248, paneltypes=0x611000011028, contexts=0x7fffffffe150, category_override=0x0) at /src/blender/source/blender/editors/screen/area.c:2842 - 12 0x00005555653b4218 in buttons_main_region_layout_properties (C=0x60c000000108, sbuts=0x6120001f63c8, region=0x614000070248) at /src/blender/source/blender/editors/space_buttons/space_buttons.c:295 - 13 0x00005555653b435f in buttons_main_region_layout (C=0x60c000000108, region=0x614000070248) at /src/blender/source/blender/editors/space_buttons/space_buttons.c:307 - 14 0x000055555fc1d3f3 in ED_region_do_layout (C=0x60c000000108, region=0x614000070248) at /src/blender/source/blender/editors/screen/area.c:494 - 15 0x000055555fad6a51 in wm_draw_window_offscreen (C=0x60c000000108, win=0x613000526508, stereo=false) at /src/blender/source/blender/windowmanager/intern/wm_draw.c:654 - 16 0x000055555fad853b in wm_draw_window (C=0x60c000000108, win=0x613000526508) at /src/blender/source/blender/windowmanager/intern/wm_draw.c:823 - 17 0x000055555fad9b28 in wm_draw_update (C=0x60c000000108) at /src/blender/source/blender/windowmanager/intern/wm_draw.c:1026 - 18 0x000055555fac969b in WM_main (C=0x60c000000108) at /src/blender/source/blender/windowmanager/intern/wm.c:488 - 19 0x000055555fab885d in main (argc=1, argv=0x7fffffffe538) at /src/blender/source/creator/creator.c:529 ```
Julian Eisel was assigned by Campbell Barton 2020-09-09 04:07:19 +02:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by dbec51109b

This issue was referenced by dbec51109bbd3a6143bc45c6faa3908142f9da46
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80613
No description provided.