Fix T80613: Assert in UI_but_number_precision_set

-1 is a valid value to pass as RNA float precision. We let the UI code
figure out an appropriate precision then. So don't fail the assert if
-1 is passed.